[gd_scene load_steps=2 format=3 uid="uid://cnj3yw8h7b1kt"]

[ext_resource type="Script" path="res://scenes/end_game_panel.gd" id="1_end_game"]

[node name="EndGamePanel" type="Panel"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_end_game")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Message goes here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tasks completed: 10
Days survived: 25
Bugs: 45
Ducks: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rage Quit"
